<resources>
    <string name="app_name">GCGTimetable</string>

    <!-- AskhostingFragment -->
    <string name="askhosting_option_stundenplan24">Do you use <b>www.stundenplan24.de</b> for accessing your timetable?</string>
    <string name="askhosting_option_website">… or does your school use Indiware software hosted on their <b>own website</b>?</string>
    <string name="stundenplan24" translatable="false">stundenplan24</string>
    <string name="school_website">school website</string>

    <!-- Stundenplan24LoginFragment -->
    <string name="profile_login">Login</string>
    <string name="profile_login_prompt">Login using your credentials for www.stundenplan24.de</string>
    <string name="schoolnr">school number</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="profile_student">student</string>
    <string name="profile_teacher">teacher</string>
    <string name="login_error_offline">It looks like you are offline. Please check your Internet connection.</string>
    <string name="login_error_auth">Wrong login credentials. Please check username or password.</string>
    <string name="login_error_not_found">Couldn\'t find your school on stundenplan24.de. Please check your school number.</string>
    <string name="login_error_unknown">We\'re sorry, an unusual error occurred. Please report this, if you\'re tech savvy have a look at the ADB logcat logs.</string>

    <!-- Content descriptions -->
    <string name="current_week">Current week</string>
    <string name="choose_courses">Choose courses</string>
    <string name="edit_login">Edit login</string>
    <string name="filter_class_names">Classes</string>
    <string name="filter_course_ids">Courses</string>
    <string name="stundenplan24_login">Stundenplan24 Login</string>
    <string name="filters">Select courses</string>
    <string name="class_template">Class %1$s</string>

    <!-- TimetableDayFragment -->
    <string name="timetable_error_not_found">Nothing to show for today!</string>
    <string name="timetable_error_offline">Currently at school? \'cause it appears you\'re offline.</string>
    <string name="timetable_error_unknown">Something went wrong, sorry. Please help us and report this error.</string>
    <string name="timetable_check_filter">Pretty quiet in here. You might want to check your class filter!</string>
    <string name="button_check_filter">Check filters</string>
    <string name="as_every_weekday">as every %1$s</string>
</resources>
